tests/ui/const-generics/generic-param-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/generic-param-mismatch.rs:2:5
   |
LL | fn test<const N: usize, const M: usize>() -> [u8; M] {
   |                                              ------- expected `[u8; M]` because of return type
LL |     [0; N]
   |     ^^^^^^ expected an array with a size of M, found one with a size of N

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
